# HexGPU

./: .gitignore  .gitmodules  Arhitektura.md  README.md  TODO list.md  Zadumka.md
docs/: Derevja.md  Otrisovka.md  Pamätj geoemtrii.md  Smešivanije i tuman.md  Tehnologiceskij stek.md  Vyzovy Vulkan.md
src/: Assert.hpp  BlockType.hpp  BlockTypeList.hpp  Buffer.cpp  Buffer.hpp  BuildPrismRenderer.cpp  BuildPrismRenderer.hpp  CMakeLists.txt  CameraController.cpp  CameraController.hpp  ChunkDataCompressor.cpp  ChunkDataCompressor.hpp  ChunksStorage.cpp  ChunksStorage.hpp  CloudsTextureGenerator.cpp  CloudsTextureGenerator.hpp  Constants.hpp  DebugParams.hpp  GPUAllocator.cpp  GPUAllocator.hpp  GPUDataUploader.cpp  GPUDataUploader.hpp  GlobalDescriptorPool.cpp  GlobalDescriptorPool.hpp  HexGPUVulkan.hpp  Host.cpp  Host.hpp  ImGuiWrapper.cpp  ImGuiWrapper.hpp  Image.cpp  Image.hpp  Keyboard.hpp  Log.cpp  Log.hpp  Main.cpp  MainRenderPass.cpp  MainRenderPass.hpp  Mat.cpp  Mat.hpp  Math.hpp  (+45 more)
src/shaders/: build_prism.frag.glsl  build_prism.vert.glsl  chunk_draw_info_shift.comp.glsl  chunk_gen_prepare.comp.glsl  clouds.frag.glsl  clouds.vert.glsl  clouds_texture_gen.comp.glsl  fire.frag.glsl  fire.vert.glsl  fire_dither_2x2.frag.glsl  fire_dither_4x4.frag.glsl  geometry_allocate.comp.glsl  geometry_gen.comp.glsl  geometry_size_calculate.comp.glsl  geometry_size_calculate_prepare.comp.glsl  grass.vert.glsl  grass_dither_2x2.frag.glsl  grass_dither_4x4.frag.glsl  initial_light_fill.comp.glsl  light.comp.glsl  light_update.comp.glsl  player_update.comp.glsl  player_world_window_build.comp.glsl  sky.frag.glsl  sky.vert.glsl  stars.frag.glsl  stars.vert.glsl  test.frag.glsl  texture_gen_bricks.comp.glsl  texture_gen_fire.comp.glsl  texture_gen_fire_stone.comp.glsl  texture_gen_foliage.comp.glsl  texture_gen_glass.comp.glsl  texture_gen_glass_blue.comp.glsl  texture_gen_glass_blue_top.comp.glsl  texture_gen_glass_cian.comp.glsl  texture_gen_glass_cian_top.comp.glsl  texture_gen_glass_green.comp.glsl  texture_gen_glass_green_top.comp.glsl  texture_gen_glass_grey.comp.glsl  (+38 more)
src/shaders/inc/: allocator.glsl  base_fire.frag.glsl  base_grass.frag.glsl  base_world.frag.glsl  block_type.glsl  chunk_draw_info.glsl  chunk_gen_info.glsl  constants.glsl  dithering.glsl  hex_funcs.glsl  keyboard.glsl  matrix.glsl  mouse.glsl  noise.glsl  player_physics.glsl  player_state.glsl  player_world_window.glsl  sky_shader_uniforms.glsl  structures.glsl  texture_gen_common.glsl  texture_gen_glass_base.comp.glsl  texture_gen_glass_top_base.comp.glsl  trees_distribution.glsl  vulkan_structs.glsl  world_blocks_external_update_queue.glsl  world_common.glsl  world_gen_common.glsl  world_global_state.glsl  world_rendering_constants.glsl  world_shader_uniforms.glsl
